--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,45 @@ version: "3.9"
 services:
 
     mariadb:
-        container_name: DD-framework
+        container_name: "${MARIADB_CONTAINER_NAME}"
+        hostname: "${MARIADB_HOSTNAME}"
         image: mariadb
         restart: always
         environment:
-            MYSQL_DATABASE: DD-framework
-            MYSQL_ROOT_USER: root
-            MYSQL_ROOT_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
         volumes:
-            - ./mariadb:/var/lib/mariadb
+            - ./storage/mariadb:/var/lib/mariadb
         ports:
-            - 3306:3306
+            - "${MARIADB_PORT}:3306"
+
+    redis:
+        image: redis
+        container_name: "${REDIS_CONTAINER_NAME}"
+        hostname: "${REDIS_HOSTNAME}"
+        restart: always
+        volumes:
+            - ./storage/redis:/data
+        ports:
+            - "${REDIS_PORT}:6379"
+
+    minio:
+        image: minio/minio
+        container_name: "${MINIO_CONTAINER_NAME}"
+        hostname: "${MINIO_HOSTNAME}"
+        command: minio server /data/minio --console-address ":80"
+
+        environment:
+            MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+            MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+        volumes:
+            - ./storage/minio:/data/minio
+        ports:
+            - "${MINIO_PORT}:80"
 
     phpmyadmin:
         image: phpmyadmin
-        container_name: phpmyadmin
+        container_name: "${PHPMYADMIN_CONTAINER_NAME}"
+        hostname: "${PHPMYADMIN_HOSTNAME}"
         restart: always
         links:
             - mariadb
@@ -24,7 +48,7 @@ services:
             UPLOAD_LIMIT: 3000M
             PMA_HOST: mariadb
         ports:
-            - 8080:80
+            - "${PHPMYADMIN_PORT}:80"
 
 networks:
     default:
