fix: redis container

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ MARIADB_HOSTNAME=mariadb
 MARIADB_ROOT_PASSWORD=password
 MARIADB_PORT=3306
 
+REDIS_IMAGE=redis:alpine
 REDIS_CONTAINER_NAME=redis
 REDIS_HOSTNAME=redis
 REDIS_PASSWORD=password
@@ -19,3 +20,5 @@ MINIO_HOSTNAME=minio
 MINIO_ROOT_USER=root
 MINIO_ROOT_PASSWORD=password
 MINIO_PORT=1010
+
+TZ=Asia/Tehran
