--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,19 @@ services:
             - "${MARIADB_PORT}:3306"
 
     redis:
-        image: redis
+        image: "${REDIS_IMAGE}"
         container_name: "${REDIS_CONTAINER_NAME}"
         hostname: "${REDIS_HOSTNAME}"
         restart: always
+        command: redis-server --requirepass "${REDIS_PASSWORD}"
+        environment:
+            TZ: "${TZ}"
         volumes:
             - ./storage/redis:/data
-        ports:
-            - "${REDIS_PORT}:6379"
+        healthcheck:
+            test: [ "CMD", "redis-cli", "ping" ]
+            retries: 3
+            timeout: 5s
 
     minio:
         image: minio/minio
